--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -3,31 +3,32 @@ name: run
 on:
   workflow_dispatch:
 
+
 jobs:
-
   build:
-  
-    - name: install
-      run: |
-        sudo apt update
-        sudo apt install -y bc bison build-essential ccache curl flex g++-multilib gcc-multilib git gnupg gperf imagemagick lib32ncurses5-dev lib32readline-dev lib32z1-dev liblz4-tool libncurses5 libncurses5-dev libsdl1.2-dev libssl-dev libwxgtk3.0-gtk3-dev libxml2 libxml2-utils lzop pngcrush rsync schedtool squashfs-tools xsltproc zip zlib1g-dev
-        mkdir ~/mmbin
-        PATH=~/mmbin:$PATH
-        curl https://storage.googleapis.com/git-repo-downloads/repo > ~/mmbin/repo
-        chmod a+x ~/mmbin/repo
-        mkdir crDroid
-        cd crDroid
-        repo init -u https://github.com/crdroidandroid/android.git -b 13.0
-        repo sync
-        . build/envsetup.sh
-        brunch "polaris"
-        du -sh *
+    runs-on: ubuntu-latest
+    steps:
+      - name: install deps
+        run: |
+          sudo apt update
+          sudo apt install -y bc bison build-essential ccache curl flex g++-multilib gcc-multilib git gnupg gperf imagemagick lib32ncurses5-dev lib32readline-dev lib32z1-dev liblz4-tool libncurses5 libncurses5-dev libsdl1.2-dev libssl-dev libwxgtk3.0-gtk3-dev libxml2 libxml2-utils lzop pngcrush rsync schedtool squashfs-tools xsltproc zip zlib1g-dev
+          mkdir ~/mmbin
+          PATH=~/mmbin:$PATH
+          curl https://storage.googleapis.com/git-repo-downloads/repo > ~/mmbin/repo
+          chmod a+x ~/mmbin/repo
+          mkdir crDroid
+          cd crDroid
+          repo init -u https://github.com/crdroidandroid/android.git -b 13.0
+          repo sync
+          . build/envsetup.sh
+          brunch "polaris"
+          du -sh *
 
-    - name: 上传附件
-      uses: actions/upload-artifact@v2
-      with:
-        name: build
-        path: |
-          out
-        retention-days: 10
+      - name: 上传附件
+        uses: actions/upload-artifact@v2
+        with:
+          name: build
+          path: |
+            out
+          retention-days: 10
     
