--- a/.github/workflows/sysinfo.yml
+++ b/.github/workflows/sysinfo.yml
@@ -5,21 +5,13 @@ on:
 
 
 jobs:
-  build:
+  main:
     runs-on: ubuntu-latest
     steps:
-      - name: install deps
+      - name: main
         run: |
           sudo apt update
           sudo apt install -y neofetch
           neofetch
           df -h
-
-      - name: 上传附件
-        uses: actions/upload-artifact@v2
-        with:
-          name: build
-          path: |
-            out
-          retention-days: 10
     
